Adding HTML5 input fields in index.html

--- a/app_procon/templates/index.html
+++ b/app_procon/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "template.html" %}
 {% block content %}
-<p>Página inicial</p>
+<input type="search" name="search"/>
+<input type="button" name="searchbutton" value="Buscar"/>
 {% endblock %}
