Adding Pie Chart sample. Updating urls.py, templates.html and a new sample charts.html

--- a/app_procon/templates/template.html
+++ b/app_procon/templates/template.html
@@ -4,5 +4,6 @@
 	<li><a href="/companies/compare">Compare</a></li>
 	<li><a href="/companies/comofunciona">Como funciona</a></li>
 	<li><a href="/companies/procon">Procon</a></li>
+	<li><a href="/companies/charts">Charts</a></li>
 </ul>
 {% block content %}{% endblock %}
