Search improved and link added to search results

--- a/app_procon/templates/index.html
+++ b/app_procon/templates/index.html
@@ -6,7 +6,9 @@
 </form>
 {% for fornecedor in fornecedores %}
 <p>
+<a href="#">
 {{ fornecedor.str_razao_social }}
+</a>
 </p>
 {% endfor %}
 {% endblock %}
