Simple ranking for companies by amount of complaints

--- a/app_procon/templates/ranking.html
+++ b/app_procon/templates/ranking.html
@@ -1,4 +1,17 @@
 {% extends "template.html" %}
 {% block content %}
 <p>Ranking</p>
+<table>
+<th>ID</th>
+<th>Razão social</th>
+<th>Radical CNPJ</th>
+<th>Quantidade de reclamações</th>
+{% for fornecedor in fornecedores %}
+<tr>
+{% for coluna in fornecedor %}
+<td>{{ coluna }}</td>
+{% endfor %}
+</tr>
+{% endfor  %}
+</table>
 {% endblock %}
