--- a/app_procon/templates/index.html
+++ b/app_procon/templates/index.html
@@ -1,4 +1,12 @@
 {% extends "template.html" %}
+{% block menubar_links %}
+<li class="active"><a href="/companies">Busca</a></li>
+<li><a href="/companies/ranking">Ranking</a></li>
+<li><a href="/companies/compare">Compare</a></li>
+<li><a href="/companies/comofunciona">Como funciona</a></li>
+<li><a href="/companies/procon">Procon</a></li>
+<li><a href="/companies/charts">Charts</a></li>
+{% endblock %}
 {% block content %}
 <form action="/companies/" method="post">{% csrf_token  %}
 {{ form.as_p }}
