--- a/app_procon/templates/ranking.html
+++ b/app_procon/templates/ranking.html
@@ -1,4 +1,12 @@
 {% extends "template.html" %}
+{% block menubar_links %}
+<li><a href="/companies">Busca</a></li>
+<li class="active"><a href="/companies/ranking">Ranking</a></li>
+<li><a href="/companies/compare">Compare</a></li>
+<li><a href="/companies/comofunciona">Como funciona</a></li>
+<li><a href="/companies/procon">Procon</a></li>
+<li><a href="/companies/charts">Charts</a></li>
+{% endblock %}
 {% block content %}
 <p>Ranking</p>
 <table>
