--- a/app_procon/templates/template.html
+++ b/app_procon/templates/template.html
@@ -35,5 +35,10 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
+    <div id="footer">
+      <div class="container">
+        <p class="muted credit">Aplicação desenvolvida por Mateus Gondim e Vanessa Gomes.</p>
+      </div>
+    </div>
 </body>
 <html>
