--- a/app_procon/templates/template.html
+++ b/app_procon/templates/template.html
@@ -1,6 +1,7 @@
 <html>
 <head>
     <link href="{{ STATIC_URL  }}bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="{{ STATIC_URL  }}css/app_procon.css" rel="stylesheet">
     <style>
       body {
           padding-top: 60px;
@@ -8,6 +9,7 @@
     </style>
 </head>
 <body>
+<div id="wrap">
 <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
@@ -35,6 +37,7 @@
     <div class="container">
         {% block content %}{% endblock %}
     </div>
+</div>
     <div id="footer">
       <div class="container">
         <p class="muted credit">Aplicação desenvolvida por Mateus Gondim e Vanessa Gomes.</p>
