--- a/app_procon/templates/ranking.html
+++ b/app_procon/templates/ranking.html
@@ -9,7 +9,8 @@
 {% endblock %}
 {% block content %}
 <div>
-<h2>Empresas com mais reclamações registradas</h2>
+<div>
+<p>Empresas com mais reclamações registradas</p>
 <table>
 <th>Ranking</th>
 <th>Nome</th>
@@ -23,10 +24,11 @@
 </div>
 {% endfor  %}
 </table>
+</div>
 <div>
-<h2>
+<p>
 Empresas com maior percentual de reclamações atendidas
-</h2>
+</p>
 <table>
 <th>Ranking</th>
 <th>Nome</th>
@@ -42,9 +44,9 @@ Empresas com maior percentual de reclamações atendidas
 </table>
 </div>
 <div>
-<h2>
+<p>
 Empresas com maior percentual de reclamações não atendidas
-</h2>
+</p>
 <table>
 <th>Ranking</th>
 <th>Nome</th>
@@ -59,11 +61,10 @@ Empresas com maior percentual de reclamações não atendidas
 {% endfor  %}
 </table>
 </div>
-</div>
 <div>
-<h2>
+<p>
 Reclamação mais comum dos consumidores
-</h2>
+</p>
 <table>
 <th>Ranking</th>
 <th>Problema</th>
@@ -78,5 +79,6 @@ Reclamação mais comum dos consumidores
 </div>
 {% endfor  %}
 </table>
+</div>
 </div>
 {% endblock %}
